<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.ks.freecoupon.module.view.account.activity.ProtocolActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/benwu_protocol_title1"
                />
            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/benwu_protocol_text1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/split_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/benwu_protocol_title2"
                />
            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/benwu_protocol_text2"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/split_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/benwu_protocol_title3"
                />
            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/benwu_protocol_text3"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/split_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/benwu_protocol_title4"
                />
            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/benwu_protocol_text4"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/split_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/benwu_protocol_title5"
                />
            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/benwu_protocol_text5"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/split_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/benwu_protocol_title6"
                />
            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/benwu_protocol_text6"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/split_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/benwu_protocol_title7"
                />
            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/benwu_protocol_text7"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/split_line"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
