<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingLeft="@dimen/dp_25"
    android:paddingRight="@dimen/dp_25">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/string_account_auth"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_27" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_17"
            android:text="@string/string_str3"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_11" />

        <!--手机号-->
        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_52"
            android:background="@drawable/edittext_style"
            android:textCursorDrawable="@drawable/cursor"
            android:hint="@string/string_phone"
            android:inputType="phone"
            android:padding="@dimen/dp_12"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/sp_14" />

        <!--验证码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_YZM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:background="@drawable/edittext_style"
                android:textCursorDrawable="@drawable/cursor"
                android:hint="@string/string_YZM"
                android:inputType="number"
                android:padding="@dimen/dp_12"
                android:textColorHint="@color/colorGray"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/btn_getYZM"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@drawable/background_button_6dp"
                android:gravity="center"
                android:text="@string/string_getYZM"
                android:textSize="@dimen/sp_12"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

        <!--下一步-->
        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_27"
            android:background="@drawable/background_button_6dp"
            android:text="@string/string_next"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</LinearLayout>
