<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_25"
    android:paddingRight="@dimen/dp_25">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_register_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/string_register"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_27" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_17"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_register_str2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_str2"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/sp_11" />

            <TextView
                android:id="@+id/tv_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/string_protocol"
                android:textColor="#4f4f4f"
                android:textSize="@dimen/sp_11"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_52"
            android:background="@drawable/edittext_style"
            android:hint="@string/string_phone"
            android:textCursorDrawable="@drawable/cursor"
            android:inputType="phone"
            android:padding="@dimen/dp_12"
            android:textColorHint="#4d000000"
            android:textSize="@dimen/sp_14"
            tools:ignore="RtlHardcoded" />

        <!--验证码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_13"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_YZM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:textCursorDrawable="@drawable/cursor"
                android:background="@drawable/edittext_style"
                android:hint="@string/string_YZM"
                android:inputType="number"
                android:padding="@dimen/dp_12"
                android:textColorHint="#4d000000"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/btn_getYZM"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@drawable/background_button_6dp"
                android:gravity="center"
                android:text="@string/string_getYZM"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/white" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_13"
            android:background="@drawable/edittext_style"
            android:textCursorDrawable="@drawable/cursor"
            android:hint="@string/string_login_password"
            android:inputType="textPassword"
            android:padding="@dimen/dp_12"
            android:textColorHint="#4d000000"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_conform_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_13"
            android:background="@drawable/edittext_style"
            android:textCursorDrawable="@drawable/cursor"
            android:hint="@string/string_conform_password"
            android:inputType="textPassword"
            android:padding="@dimen/dp_12"
            android:textColorHint="#4d000000"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/btn_register_conform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_27"
            android:background="@drawable/background_button_6dp"
            android:text="@string/string_register"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>
</LinearLayout>
