<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="@dimen/dp_15"
    tools:context=".module.view.coupon.activity.CopyTaoWordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gray3_6dp"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/dp_5"
            android:text="获取系统CLIPBOARD_SERVICE服务 得到copy实例 就搞定了"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_15" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:text="@string/string_yuanjia"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_yuanPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:text="29.00元"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:text="@string/string_xianjia"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_15" />

            <TextView
                android:id="@+id/tv_xianjia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:text="9.00元"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_15" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/string_cutLine"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_taoWord_desc"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTaowordGone"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@drawable/background_button_6dp"
        android:gravity="center"
        android:textSize="@dimen/dp_15"
        android:padding="@dimen/dp_10"
        android:text="@string/string_copyTaoWord"
        android:textColor="@color/colorWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_explain"
        android:textColor="@color/colorGray"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/sp_12" />
</LinearLayout>